small change to content

--- a/public/pip-dressing.html
+++ b/public/pip-dressing.html
@@ -82,7 +82,7 @@
               <p>Most people will get dressed and undressed - but if you have any difficulties at all, including if you sometimes don’t get dressed or undressed in the morning or before going to bed, you should probably get some points for this question. You should also get points if it takes you a long time, you couldn’t do it without another person, or without an aid or appliance.</p>
               <h2>Question 8a - tick box </h2>
               <!--.example-box-plain-->
-              <div class="well--outline">
+              <div class="callout--quote">
                 <label for="standardfield">Do you use an aid or appliance to dress or undress?</label><span class="form-hint">Aids or appliances could include shoe horns, modified clothing e.g. front fastening bras, velcro fastenings etc</span>
                 <label class="radio radio--inline">
                   <input checked name="radio-inline" type="radio" value="option1">Yes
@@ -93,15 +93,15 @@
                 <label class="radio radio--inline">
                   <input name="radio-inline" type="radio" value="option3">Sometimes
                 </label>
+                <p>If possible, try not to answer “sometimes” because either you do or you don’t use an aid or appliance. If you tick '"sometimes" the DWP might think you can manage more than you can. You can explain when you do and don’t use an aid in the extra information text box for question 8. </p>
+                <p>If you tick no: do you really not use an aid? You should probably be ticking yes and giving more detail in the extra information if any of the following apply:</p>
+                <ul>
+                  <li>you wear adapted clothing, such as clothes with velcro or clothes with no fastenings</li>
+                  <li>you use an aid some of the time but not always </li>
+                </ul>
               </div>
-              <p>If possible, try not to answer “sometimes” because either you do or you don’t use an aid or appliance. If you tick '"sometimes" the DWP might think you can manage more than you can. You can explain when you do and don’t use an aid in the extra information text box for question 8. </p>
-              <p>If you tick no: do you really not use an aid? You should probably be ticking yes and giving more detail in the extra information if any of the following apply:</p>
-              <ul>
-                <li>you wear adapted clothing, such as clothes with velcro or clothes with no fastenings</li>
-                <li>you use an aid some of the time but not always </li>
-              </ul>
               <h2>Question 8b - tick box  </h2>
-              <div class="well--outline">
+              <div class="callout--quote">
                 <label for="standardfield">Do you need help from another person to dress or undress?</label>
                 <label class="radio radio--inline">
                   <input checked name="radio-inline" type="radio" value="option1">Yes
