Fixed small bug on colours.jade

--- a/public/colours.html
+++ b/public/colours.html
@@ -55,9 +55,7 @@
                 <p>Heritage Blue<br>@heritage-blue<br>#004B88</p>
               </div>
               <div class="span3 swatch swatch--brand--heritage-yellow">
-                <p>Heritage Yellow<br>@heritage-yellow<br>
-                  <div id="FCBB69"></div>
-                </p>
+                <p>Heritage Yellow<br>@heritage-yellow<br>#FCBB69</p>
               </div>
               <div class="span3 swatch swatch--brand--responsible-purple">
                 <p>Responsible Purple<br>@responsible-purple<br>#57486B</p>
