Remove old grid page

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,8 @@
                 <li> 
                   <h4 id="grid">Grid</h4>
                   <ul>
-                    <li><a href="grid.html">Grid layout</a></li>
+                    <!--lia(href="grid.html") Grid layout
+                    -->
                     <li><a href="new-grid.html">New grid layout</a></li>
                   </ul>
                 </li>
