Amend to breadcrumb and link to navigation on long-form

--- a/public/long-form.html
+++ b/public/long-form.html
@@ -117,7 +117,7 @@
                 <p>Check your lease if you own the leasehold (not the freehold) on your home. You may have to get permission from the freeholder before work starts. If the lease says you can’t make changes, you can still ask the freeholder for permission. You may have to pay some costs.</p>
                 <div class="callout--warning">
                   <p>If you don’t get the permission or approval you need, you could be fined, prosecuted or made to pay to put things right.</p>
-                </div><a href="#" class="back-to-top">Back to Top</a><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
+                </div><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step2">
                 <h2 class="ref-heading"><span class="ref-heading__heading">Step 2: Find good builders or contractors</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
