--- a/public/pip-index.html
+++ b/public/pip-index.html
@@ -59,7 +59,7 @@
     </nav>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="#" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Benefits">Benefits</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">PIP</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Benefits">Benefits</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Sick or disabled people and carers">Sick or disabled people and carers</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">PIP</span>
         </div>
       </nav>
       <aside class="section-notice">
