--- a/public/toolbar.html
+++ b/public/toolbar.html
@@ -28,9 +28,16 @@
   </head>
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
-    <header class="main-header">
-      <div class="main-header__content main-content"><a href="index.html" title="Citizens Advice home" class="main-header__logo no-print"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&amp;#39;/Static/images/logos/ca-logo_100px.svg.png&amp;#39;;" src="assets/images/ca-logo_100px.svg"></a><img src="assets/images/ca-logo-hz-280px.svg" class="print-only logo"></div>
+    <header class="styleguide--header">
+      <div class="styleguide--header--content"><img src="assets/images/ca-logo-hz-white-280px.svg"></div>
     </header>
+    <!--header.main-header
+    .main-header__content.main-content
+    	a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
+    		img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
+    	img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
+    
+    -->
     <div class="main-container">
       <nav class="main-breadcrumb">
         <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#modules" title="Modules">Modules</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Content toolbar</span>
