--- a/public/typography.html
+++ b/public/typography.html
@@ -44,63 +44,88 @@
         </div>
       </nav>
       <div class="main-content">
-        <div class="title">
-          <h1 class="title__heading js-ref"><span class="title__title">Typography</span></h1>
-        </div>
-        <div class="articleContent row">
-          <div class="span8">
-            <p>The font used is <a href="http://www.google.com/fonts/specimen/Open+Sans">Open Sans</a> a sans font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using four of these.</p>
-            <p>When calling in the font weights or any of the typographic styles, be sure to use the variable rather than the font weight directly.</p>
-            <p style="font-weight: 400;">Open Sans 400 <span class="code">@font-weight-base</span></p>
-            <p style="font-weight: 600;">Open Sans 600 <span class="code">@font-weight-bold</span></p>
-            <p style="font-weight: 700;">Open Sans 700 <span class="code">@font-weight-bolder</span></p>
-            <p style="font-weight: 800;">Open Sans 800 <span class="code">@font-weight-boldest</span></p>
-            <p>Typographic styles for content specific pages. See <a href="#">content guidelines</a> for how to write content.</p>
-            <h1>h1 for page titles<span class="code">@font-size-h1</span></h1>
-            <h2>h2 sub header, for section titles<span class="code">@font-size-h2</span></h2>
-            <h3>h3 for headings within sections<span class="code">@font-size-h3</span></h3>
-            <h4>h4<span class="code">@font-size-h4</span></h4>
-            <h5>h5<span class="code">@font-size-h5</span></h5>
-            <p class="u-lede">This is a lead paragraph of text. Only use one of these per page, or not at all. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<span class="code">@u-lede</span></p>
-            <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-            <h2>Sub header, for introducing content sections</h2>
-            <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-            <h3>h3 header within sub header</h3>
-            <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-            <h3>Links</h3>
-            <ul>
-              <li>This is a standard text <a href="#">with a link</a> and an external.</li>
-              <li>This is a standard text <a href="#" class="a-external-link">with an external link</a>.<span class="codea-external-link"></span></span></li>
-              <li>This is a standard text <a href="#" class="a-pdf-doc">with a link to a pdf document</a>.<span class="codea-pdf-doc"></span></span></li>
-              <li>This is a standard text <a href="#" class="a-file-doc">with a link to a html or text file</a>.<span class="codea-file-doc"></span></span></li>
-              <li>This is a standard text <a href="#" class="a-word-doc">with a link to a word document</a>.<span class="codea-word-doc"></span></span></li>
-              <li>This is a standard text <a href="#" class="a-excel-doc">with a link to a excel document</a>.<span class="codea-excel-doc"></span></span></li>
-            </ul>
-            <h3>Standard unordered list</h3>
-            <ul>
-              <li>Lorem ipsum dolor sit amet</li>
-              <li>Lorem ipsum dolor sit amet</li>
-              <li style="list-style: none; display: inline">
-                <ul>
-                  <li>Lorem ipsum dolor sit amet</li>
-                  <li>Lorem ipsum dolor sit amet</li>
-                </ul>
-              </li>
-              <li>Lorem ipsum dolor sit amet</li>
-            </ul>
-            <h3>Standard ordered list</h3>
-            <ol>
-              <li>Lorem ipsum dolor sit amet</li>
-              <li>Lorem ipsum dolor sit
-                <ol>
-                  <li>Lorem ipsum dolor sit amet</li>
-                  <li>Lorem ipsum dolor sit amet</li>
-                </ol>
-              </li>
-              <li>Lorem ipsum dolor sit amet</li>
-            </ol>
+        <div id="main" role="main" class="main-content__right">
+          <div class="title">
+            <h1 class="title__heading js-ref"><span class="title__title">Typography</span></h1>
+          </div>
+          <div class="articleContent">
+            <div>
+              <p>The font used is <a href="http://www.google.com/fonts/specimen/Open+Sans">Open Sans</a> a sans font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using four of these.</p>
+              <p>When calling in the font weights or any of the typographic styles, be sure to use the variable rather than the font weight directly.</p>
+              <p style="font-weight: 400;">Open Sans 400 <span class="code">@font-weight-base</span></p>
+              <p style="font-weight: 600;">Open Sans 600 <span class="code">@font-weight-bold</span></p>
+              <p style="font-weight: 700;">Open Sans 700 <span class="code">@font-weight-bolder</span></p>
+              <p style="font-weight: 800;">Open Sans 800 <span class="code">@font-weight-boldest</span></p>
+              <p>Typographic styles for content specific pages. See <a href="#">content guidelines</a> for how to write content.</p>
+              <h1>h1 for page titles<span class="code">@font-size-h1</span></h1>
+              <h2>h2 sub header, for section titles<span class="code">@font-size-h2</span></h2>
+              <h3>h3 for headings within sections<span class="code">@font-size-h3</span></h3>
+              <h4>h4<span class="code">@font-size-h4</span></h4>
+              <h5>h5<span class="code">@font-size-h5</span></h5>
+              <p class="u-lede">This is a lead paragraph of text. Only use one of these per page, or not at all. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<span class="code">@u-lede</span></p>
+              <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+              <h2>Sub header, for introducing content sections</h2>
+              <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+              <h3>h3 header within sub header</h3>
+              <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+              <h3>Links</h3>
+              <ul>
+                <li>This is a standard text <a href="#">with a link</a> and an external.</li>
+                <li>This is a standard text <a href="#" class="a-external-link">with an external link</a>.<span class="codea-external-link"></span></span></li>
+                <li>This is a standard text <a href="#" class="a-pdf-doc">with a link to a pdf document</a>.<span class="codea-pdf-doc"></span></span></li>
+                <li>This is a standard text <a href="#" class="a-file-doc">with a link to a html or text file</a>.<span class="codea-file-doc"></span></span></li>
+                <li>This is a standard text <a href="#" class="a-word-doc">with a link to a word document</a>.<span class="codea-word-doc"></span></span></li>
+                <li>This is a standard text <a href="#" class="a-excel-doc">with a link to a excel document</a>.<span class="codea-excel-doc"></span></span></li>
+              </ul>
+              <h3>Standard unordered list</h3>
+              <ul>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li style="list-style: none; display: inline">
+                  <ul>
+                    <li>Lorem ipsum dolor sit amet</li>
+                    <li>Lorem ipsum dolor sit amet</li>
+                  </ul>
+                </li>
+                <li>Lorem ipsum dolor sit amet</li>
+              </ul>
+              <h3>Standard ordered list</h3>
+              <ol>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit
+                  <ol>
+                    <li>Lorem ipsum dolor sit amet</li>
+                    <li>Lorem ipsum dolor sit amet</li>
+                  </ol>
+                </li>
+                <li>Lorem ipsum dolor sit amet</li>
+              </ol>
+            </div>
           </div>
         </div>
+        <nav class="side-nav-beta">
+          <ul>
+            <li class="side-nav-beta__heading -active -open"><a><span>Styles</span></a></li>
+            <li>
+              <ul>
+                <li class="side-nav-beta__sibling"><a href="typography.html" title="Typography" class="-current" item.="item.">Typography</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="colours.html" title="Colours" item.="item.">Colours</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="tables.html" title="Tables" item.="item.">Tables</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons" item.="item.">Buttons</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields" item.="item.">Fields</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="field-groups.html" title="Field groups" item.="item.">Field groups</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="new-grid.html" title="Grid" item.="item.">Grid</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
         <div class="print-only">
           <h2>This section is print only</h2>
         </div>
