--- a/public/fields.html
+++ b/public/fields.html
@@ -44,12 +44,12 @@
         </div>
       </nav>
       <div class="main-content">
-        <div class="title">
-          <h1 class="title__heading js-ref"><span class="title__title">Fields</span></h1>
-        </div>
-        <div class="articleContent">
-          <div class="row">
-            <div class="span8">
+        <div id="main" role="main" class="main-content__right">
+          <div class="title">
+            <h1 class="title__heading js-ref"><span class="title__title">Fields</span></h1>
+          </div>
+          <div class="articleContent">
+            <div>
               <p>Forms are an essential medium to help people find the information they need, complete a task or complete an application online. By maintaining the least friction possible between starting and completing the form will ensure greater completion rates for clients with the most accurate information possible.</p>
               <p>Only ask for the minimum amount of information for the client to complete the task required, this means that forms are kept shorter, improving completion rate and also trust. Any fields which are optional should be indicated as such.</p>
               <h3>Examples of form components</h3>
@@ -366,6 +366,29 @@
             </div>
           </div>
         </div>
+        <nav class="side-nav-beta">
+          <ul>
+            <li class="side-nav-beta__heading -active -open"><a><span>Styles</span></a></li>
+            <li>
+              <ul>
+                <li class="side-nav-beta__sibling"><a href="typography.html" title="Typography" item.="item.">Typography</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="colours.html" title="Colours" item.="item.">Colours</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="tables.html" title="Tables" item.="item.">Tables</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons" item.="item.">Buttons</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields" class="-current" item.="item.">Fields</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="field-groups.html" title="Field groups" item.="item.">Field groups</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="new-grid.html" title="Grid" item.="item.">Grid</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
         <div class="print-only">
           <h2>This section is print only</h2>
         </div>
