Added sidebar to buttons.jade

--- a/public/buttons.html
+++ b/public/buttons.html
@@ -149,9 +149,9 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="colours.html" title="Colours" item.="item.">Colours</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="tables.html" title="Tables" class="-current" item.="item.">Tables</a>
+                <li class="side-nav-beta__sibling"><a href="tables.html" title="Tables" item.="item.">Tables</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons" item.="item.">Buttons</a>
+                <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons" class="-current" item.="item.">Buttons</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields" item.="item.">Fields</a>
                 </li>
