Added sidebar to new-grid.jade

--- a/public/field-groups.html
+++ b/public/field-groups.html
@@ -44,12 +44,12 @@
         </div>
       </nav>
       <div class="main-content">
-        <div class="title">
-          <h1 class="title__heading js-ref"><span class="title__title">Field groups</span></h1>
-        </div>
-        <div class="articleContent">
-          <div class="row">
-            <div class="span8">
+        <div id="main" role="main" class="main-content__right">
+          <div class="title">
+            <h1 class="title__heading js-ref"><span class="title__title">Field groups</span></h1>
+          </div>
+          <div class="articleContent">
+            <div>
               <div class="example-box-plain">
                 <fieldset>
                   <div class="form-group-date">
@@ -199,6 +199,29 @@
             </div>
           </div>
         </div>
+        <nav class="side-nav-beta">
+          <ul>
+            <li class="side-nav-beta__heading -active -open"><a><span>Styles</span></a></li>
+            <li>
+              <ul>
+                <li class="side-nav-beta__sibling"><a href="typography.html" title="Typography" item.="item.">Typography</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="colours.html" title="Colours" item.="item.">Colours</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="tables.html" title="Tables" item.="item.">Tables</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons" item.="item.">Buttons</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields" item.="item.">Fields</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="field-groups.html" title="Field groups" class="-current" item.="item.">Field groups</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="new-grid.html" title="Grid" item.="item.">Grid</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
         <div class="print-only">
           <h2>This section is print only</h2>
         </div>
