--- a/public/new-grid.html
+++ b/public/new-grid.html
@@ -40,160 +40,185 @@
     -->
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#styles" title="Styles">Styles</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#grid" title="Grid">Grid</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">New grid layout</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#styles" title="Styles">Styles</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">New grid layout</span>
         </div>
       </nav>
       <div class="main-content">
-        <div class="title">
-          <h1 class="title__heading js-ref"><span class="title__title">New grid layout</span></h1>
+        <div id="main" role="main" class="main-content__right">
+          <div class="title">
+            <h1 class="title__heading js-ref"><span class="title__title">New grid layout</span></h1>
+          </div>
+          <div class="articleContent">
+            <div class="row">
+              <div class="span12">
+                <p>The default page width is 1080px with a 12-column grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, <a href="#">improving cognition</a>.</p>
+                <p>The layout for pages should be 12 columns (full width), 3 or 4 column, other variations can be used if needed.</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span12">
+                <h3>Full Width</h3>
+              </div>
+              <div class="span12">
+                <div class="example-box-full">1/1<code>span12</code></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span12">
+                <h3>Half Width</h3>
+              </div>
+              <div class="span6">
+                <div class="example-box-full">1/2<code>span6</code></div>
+              </div>
+              <div class="span6">
+                <div class="example-box-full">1/2<code>span6</code></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span12">
+                <h3>Thirds</h3>
+              </div>
+              <div class="span4">
+                <div class="example-box-full">1/3<code>span4</code></div>
+              </div>
+              <div class="span4">
+                <div class="example-box-full">1/3<code>span4</code></div>
+              </div>
+              <div class="span4">
+                <div class="example-box-full">1/3<code>span4</code></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span12">
+                <h3>Quarters</h3>
+              </div>
+              <div class="span3">
+                <div class="example-box-full">1/4<code>span3</code></div>
+              </div>
+              <div class="span3">
+                <div class="example-box-full">1/4<code>span3</code></div>
+              </div>
+              <div class="span3">
+                <div class="example-box-full">1/4<code>span3</code></div>
+              </div>
+              <div class="span3">
+                <div class="example-box-full">1/4<code>span3</code></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span12">
+                <h3>Twelfth</h3>
+                <p>Maximum columns</p>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+              <div class="span1">
+                <div class="example-box-full"></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span12">
+                <h3>Two Thirds (content first)</h3>
+              </div>
+              <div class="span8">
+                <div class="example-box-full">2/3<code>span8</code></div>
+              </div>
+              <div class="span4">
+                <div class="example-box-full">1/3<code>span4</code></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span12">
+                <h3>Two Thirds (navigation first)</h3>
+              </div>
+              <div class="span4">
+                <div class="example-box-full">1/3<code>span4</code></div>
+              </div>
+              <div class="span8">
+                <div class="example-box-full">2/3<code>span8</code></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span12">
+                <h3>One Quarter</h3>
+              </div>
+              <div class="span3">
+                <div class="example-box-full">1/4<code>span3</code></div>
+              </div>
+              <div class="span9">
+                <div class="example-box-full">3/4<code>span9</code></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span12"> 
+                <h3>Flexible (defined with mixin in LESS)</h3>
+              </div>
+              <div class="customcol49">
+                <div class="example-box-full">4/9<code>.col(4,9);</code></div>
+              </div>
+              <div class="customcol13">
+                <div class="example-box-full">3/9<code>.col(1,3);</code></div>
+              </div>
+              <div class="customcol29">
+                <div class="example-box-full">2/9<code>.col(2,9);</code></div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="articleContent">
-          <div class="row">
-            <div class="span12">
-              <p>The default page width is 1080px with a 12-column grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, <a href="#">improving cognition</a>.</p>
-              <p>The layout for pages should be 12 columns (full width), 3 or 4 column, other variations can be used if needed.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h3>Full Width</h3>
-            </div>
-            <div class="span12">
-              <div class="example-box-full">1/1<code>span12</code></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h3>Half Width</h3>
-            </div>
-            <div class="span6">
-              <div class="example-box-full">1/2<code>span6</code></div>
-            </div>
-            <div class="span6">
-              <div class="example-box-full">1/2<code>span6</code></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h3>Thirds</h3>
-            </div>
-            <div class="span4">
-              <div class="example-box-full">1/3<code>span4</code></div>
-            </div>
-            <div class="span4">
-              <div class="example-box-full">1/3<code>span4</code></div>
-            </div>
-            <div class="span4">
-              <div class="example-box-full">1/3<code>span4</code></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h3>Quarters</h3>
-            </div>
-            <div class="span3">
-              <div class="example-box-full">1/4<code>span3</code></div>
-            </div>
-            <div class="span3">
-              <div class="example-box-full">1/4<code>span3</code></div>
-            </div>
-            <div class="span3">
-              <div class="example-box-full">1/4<code>span3</code></div>
-            </div>
-            <div class="span3">
-              <div class="example-box-full">1/4<code>span3</code></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h3>Twelfth</h3>
-              <p>Maximum columns</p>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-            <div class="span1">
-              <div class="example-box-full"></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h3>Two Thirds (content first)</h3>
-            </div>
-            <div class="span8">
-              <div class="example-box-full">2/3<code>span8</code></div>
-            </div>
-            <div class="span4">
-              <div class="example-box-full">1/3<code>span4</code></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h3>Two Thirds (navigation first)</h3>
-            </div>
-            <div class="span4">
-              <div class="example-box-full">1/3<code>span4</code></div>
-            </div>
-            <div class="span8">
-              <div class="example-box-full">2/3<code>span8</code></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12">
-              <h3>One Quarter</h3>
-            </div>
-            <div class="span3">
-              <div class="example-box-full">1/4<code>span3</code></div>
-            </div>
-            <div class="span9">
-              <div class="example-box-full">3/4<code>span9</code></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span12"> 
-              <h3>Flexible (defined with mixin in LESS)</h3>
-            </div>
-            <div class="customcol49">
-              <div class="example-box-full">4/9<code>.col(4,9);</code></div>
-            </div>
-            <div class="customcol13">
-              <div class="example-box-full">3/9<code>.col(1,3);</code></div>
-            </div>
-            <div class="customcol29">
-              <div class="example-box-full">2/9<code>.col(2,9);</code></div>
-            </div>
-          </div>
-        </div>
+        <nav class="side-nav-beta">
+          <ul>
+            <li class="side-nav-beta__heading -active -open"><a><span>Styles</span></a></li>
+            <li>
+              <ul>
+                <li class="side-nav-beta__sibling"><a href="typography.html" title="Typography" item.="item.">Typography</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="colours.html" title="Colours" item.="item.">Colours</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="tables.html" title="Tables" item.="item.">Tables</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons" item.="item.">Buttons</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields" item.="item.">Fields</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="field-groups.html" title="Field groups" item.="item.">Field groups</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="new-grid.html" title="Grid" class="-current" item.="item.">Grid</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
         <div class="print-only">
           <h2>This section is print only</h2>
         </div>
