Added sidebar to section-notice.jade

--- a/public/section-notice.html
+++ b/public/section-notice.html
@@ -56,21 +56,22 @@
         </div>
       </aside>
       <div class="main-content">
-        <div class="title">
-          <h1 class="title__heading js-ref"><span class="title__title">Section Notices</span></h1>
-        </div>
-        <div class="articleContent row">
-          <div class="span8">
-            <p>Section notices appear between the breadcrumbs and page content.</p>
-            <div class="example-box-plain">
-              <aside class="section-notice">
-                <h2 class="screenreader">Notice</h2>
-                <div class="section-notice__content">
-                  <p><span class="badge">NEW</span>This page is part of <a href="#">our new approach to digital advice</a>.</p>
-                </div>
-              </aside>
-            </div>
-            <pre><code class="language-html">&lt;aside class="section-notice"&gt;
+        <div id="main" role="main" class="main-content__right">
+          <div class="title">
+            <h1 class="title__heading js-ref"><span class="title__title">Section Notices</span></h1>
+          </div>
+          <div class="articleContent">
+            <div>
+              <p>Section notices appear between the breadcrumbs and page content.</p>
+              <div class="example-box-plain">
+                <aside class="section-notice">
+                  <h2 class="screenreader">Notice</h2>
+                  <div class="section-notice__content">
+                    <p><span class="badge">NEW</span>This page is part of <a href="#">our new approach to digital advice</a>.</p>
+                  </div>
+                </aside>
+              </div>
+              <pre><code class="language-html">&lt;aside class="section-notice"&gt;
 	&lt;h2 class="screenreader"&gt;Notice&lt;/h2&gt;
 	&lt;div class="section-notice__content"&gt;
 		&lt;p&gt;
@@ -78,15 +79,15 @@
 		&lt;/p&gt;
 	&lt;/div&gt;
 &lt;/aside&gt;</code></pre>
-            <div class="example-box-plain">
-              <aside class="section-notice__adviser">
-                <h2 class="screenreader">Notice</h2>
-                <div class="section-notice__content">
-                  <p><span class="badge">ADVISER</span>This page is part of <a href="#">adviser only</a> content.</p>
-                </div>
-              </aside>
-            </div>
-            <pre><code class="language-html">&lt;aside class="section-notice__adviser"&gt;
+              <div class="example-box-plain">
+                <aside class="section-notice__adviser">
+                  <h2 class="screenreader">Notice</h2>
+                  <div class="section-notice__content">
+                    <p><span class="badge">ADVISER</span>This page is part of <a href="#">adviser only</a> content.</p>
+                  </div>
+                </aside>
+              </div>
+              <pre><code class="language-html">&lt;aside class="section-notice__adviser"&gt;
 	&lt;h2 class="screenreader"&gt;Notice&lt;/h2&gt;
 	&lt;div class="section-notice__content"&gt;
 		&lt;p&gt;
@@ -94,8 +95,36 @@
 		&lt;/p&gt;
 	&lt;/div&gt;
 &lt;/aside&gt;</code></pre>
+            </div>
           </div>
         </div>
+        <nav class="side-nav-beta">
+          <ul>
+            <li class="side-nav-beta__heading -active -open"><a><span>Modules</span></a></li>
+            <li>
+              <ul>
+                <li class="side-nav-beta__sibling"><a href="callout.html" title="Callout" item.="item.">Callout</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="collapse.html" title="Collapse" item.="item.">Collapse</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="charts.html" title="Charts" item.="item.">Charts</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="section-notice.html" title="Section Notices" class="-current" item.="item.">Section Notices</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="toolbar.html" title="Content toolbar" item.="item.">Content toolbar</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="cookie-monster.html" title="Cookie Monster" item.="item.">Cookie Monster</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="extent.html" title="Extent Switcher" item.="item.">Extent Switcher</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="overlay.html" title="Modal/Overlay" item.="item.">Modal/Overlay</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="reference.html" title="Reference tool" item.="item.">Reference tool</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
         <div class="print-only">
           <h2>This section is print only</h2>
         </div>
