--- a/public/cookie-monster.html
+++ b/public/cookie-monster.html
@@ -50,39 +50,66 @@
         </div>
       </nav>
       <div class="main-content">
-        <div class="title">
-          <h1 class="title__heading js-ref"><span class="title__title">Cookie Monster</span></h1>
-        </div>
-        <div class="articleContent row">
-          <div class="span8">
-            <p>Cookie monster appears attached to the bottom of the screen.</p>
-            <div class="example-box-plain">
-              <div style="position:relative;z-index:0;" class="cookie-monster hide-no-cookies hide-no-js no-print">
-                <div class="cookie-monster__content">
-                  <p>This site uses cookies. Find out more about <a href="#">our use of cookies</a>.</p>
-                  <button data-action="close" type="button" class="btn cookie-monster__close">Close</button>
+        <div id="main" role="main" class="main-content__right">
+          <div class="title">
+            <h1 class="title__heading js-ref"><span class="title__title">Cookie Monster</span></h1>
+          </div>
+          <div class="articleContent">
+            <div>
+              <p>Cookie monster appears attached to the bottom of the screen.</p>
+              <div class="example-box-plain">
+                <div style="position:relative;z-index:0;" class="cookie-monster hide-no-cookies hide-no-js no-print">
+                  <div class="cookie-monster__content">
+                    <p>This site uses cookies. Find out more about <a href="#">our use of cookies</a>.</p>
+                    <button data-action="close" type="button" class="btn cookie-monster__close">Close</button>
+                  </div>
                 </div>
               </div>
-            </div>
-            <pre><code class="language-html">&lt;div class="cookie-monster hide-no-cookies hide-no-js no-print"&gt;
+              <pre><code class="language-html">&lt;div class="cookie-monster hide-no-cookies hide-no-js no-print"&gt;
 	&lt;div class="cookie-monster__content"&gt;
 		&lt;p&gt;This site uses cookies. Find out more about &lt;a href="#"&gt;our use of cookies&lt;/a&gt;.&lt;/p&gt;
 		&lt;button data-action="close" type="button" class="btn cookie-monster__close"&gt;Close&lt;/button&gt;
 	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
+            </div>
           </div>
         </div>
+        <nav class="side-nav-beta">
+          <ul>
+            <li class="side-nav-beta__heading -active -open"><a><span>Modules</span></a></li>
+            <li>
+              <ul>
+                <li class="side-nav-beta__sibling"><a href="callout.html" title="Callout" item.="item.">Callout</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="collapse.html" title="Collapse" item.="item.">Collapse</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="charts.html" title="Charts" item.="item.">Charts</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="section-notice.html" title="Section Notices" item.="item.">Section Notices</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="toolbar.html" title="Content toolbar" item.="item.">Content toolbar</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="cookie-monster.html" title="Cookie Monster" class="-current" item.="item.">Cookie Monster</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="extent.html" title="Extent Switcher" item.="item.">Extent Switcher</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="overlay.html" title="Modal/Overlay" item.="item.">Modal/Overlay</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="reference.html" title="Reference tool" item.="item.">Reference tool</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
         <div class="print-only">
           <h2>This section is print only</h2>
         </div>
       </div>
     </div>
     <footer data-track-zone="footer" id="footer" class="main-footer">
-      <div class="main-footer__content flex-row js-equal-height">
-        <div class="main-footer__box main-footer__box--copyright">
-          <div>
-            <p><img alt="" height="100" src="assets/images/ca-logo_100px.svg.png" width="100">Copyright © 2015 Citizens Advice. All rights reserved.<br>Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057<br>VAT number 726 0202 76 Company limited by guarantee. Registered number 1436945 England<br>Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD</p>
-          </div>
+      <div class="styleguide--footer">
+        <div>
+          <p><img alt="" height="100" src="assets/images/ca-logo_100px.svg.png" width="100">Copyright © 2015 Citizens Advice. All rights reserved.<br>Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057<br>VAT number 726 0202 76 Company limited by guarantee. Registered number 1436945 England<br>Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD</p>
         </div>
       </div>
     </footer><!--[if IE 8]></div><![endif]-->
