Added sidebar to extent.jade

--- a/public/extent.html
+++ b/public/extent.html
@@ -97,15 +97,28 @@
             });
           </script>
         </div>
-        <!-- Set the number at the end to the array position of the active page-->
         <nav class="side-nav-beta">
           <ul>
-            <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
+            <li class="side-nav-beta__heading -active -open"><a><span>Modules</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 1" class="-current" item.="item.">Sibling page 1</a>
+                <li class="side-nav-beta__sibling"><a href="callout.html" title="Callout" item.="item.">Callout</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 2" item.="item.">Sibling page 2</a>
+                <li class="side-nav-beta__sibling"><a href="collapse.html" title="Collapse" item.="item.">Collapse</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="charts.html" title="Charts" item.="item.">Charts</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="section-notice.html" title="Section Notices" item.="item.">Section Notices</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="toolbar.html" title="Content toolbar" item.="item.">Content toolbar</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="cookie-monster.html" title="Cookie Monster" item.="item.">Cookie Monster</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="extent.html" title="Extent Switcher" class="-current" item.="item.">Extent Switcher</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="overlay.html" title="Modal/Overlay" item.="item.">Modal/Overlay</a>
+                </li>
+                <li class="side-nav-beta__sibling"><a href="reference.html" title="Reference tool" item.="item.">Reference tool</a>
                 </li>
               </ul>
             </li>
